---
source: src/linter.rs
expression: checks
---
- kind:
    UnusedImport:
      - models.Nut
      - false
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 7
  fix:
    patch:
      content: "from models import (\n    Fruit,\n)"
      location:
        row: 6
        column: 0
      end_location:
        row: 9
        column: 1
- kind:
    UndefinedName: Bar
  location:
    row: 26
    column: 18
  end_location:
    row: 26
    column: 21
  fix: ~

